# impltraits

./: .gitignore  Makefile  README.md
contract/: Cargo.toml
contract/src/: enums.rs  structs.rs
