[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "structs"
path = "src/structs.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "enums"
path = "src/enums.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

